--- a/misterjack/view/GameBoard.fxml
+++ b/misterjack/view/GameBoard.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="misterjack.view.GameBoardController">
+<AnchorPane maxHeight="900" maxWidth="1600" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900" prefWidth="1600" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="misterjack.view.GameBoardController">
    <children>
       <GridPane layoutX="358.0" layoutY="32.0" prefHeight="650.0" prefWidth="650.0" AnchorPane.bottomAnchor="125.0" AnchorPane.leftAnchor="475.0" AnchorPane.rightAnchor="475.0" AnchorPane.topAnchor="125.0">
         <columnConstraints>
